# random_code_storage

./: .gitignore  CacheExperiment.java  FlutterFlow-GitHub-AutomatedTests.yml  MonoRepo-To-MultiRepo-Setup.yml  factory-method.md  gd-takessc-send.gd  godot-take-screenshot-node.js
Barcode-Reader/: CMakeLists.txt  README.md  ScannerIndex.h  cache.h  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.h  utilities.cpp  utilities.h
FinanceTrackerAPI/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pom.xml
First-Java-Game/: README.md
First-Java-Game/src/: Sign.txt
Graphics-Programming-Test/: .gitignore
Graphics-Programming-Test/openGL/learning/: .env.cmake  CMakeLists.txt  run.bat
Graphics-Programming-Test/openGL/learning/src/: MeGlWindow.cpp  MeGlWindow.hpp  main.cpp
Graphics-Programming-Test/vulkan/: .gitignore
ImGui-Setup-MainOnly/: README.md  main.cpp
LeetCode/: 104. Maximum Depth of Binary Tree.py  1290. Convert Binary Number in a Linked List to Integer.c  1290. Convert Binary Number in a Linked List to Integer.cpp  1475. Final Prices With a Special Discount in a Shop.py  2471. Minimum Number of Operations to Sort a Binary Tree by Level.py  268. Missing Number.cpp  3136. Valid Word.c  3201. Find the Maximum Length of Valid Subsequence I.c  3202. Find the Maximum Length of Valid Subsequence II.c  Code 1417. Reformat The String.cpp  Minimum Add to Make Parentheses Valid.cpp  Minimum Add to Make Parentheses Valid.cs  Readme.md  Remove Nodes From Linked List.cs  Remove Nodes From Linked List.java  RemoveDuplicates.cs  RemoveDuplicates.java  RemoveElement.cs  SearchInsert.cs  String_Compression_III.py  TwoSum.cs  canSortArray.cpp  containsDuplicate.cpp  countSubarrays Fixed Bounds.java  countSubarrays atLeast K times.java  findDuplicate.java  findDuplicates.java  firstMissingPositive.java  isIsomorphic.java  lengthOfLastWord.java  makeFancyString.py  maxSubarrayLength.java  minChanges.py  numSubarrayProductLessThanK.java  removeElement.java  runningSum.java  twoSum.java
LeetCode/arrays/: 1. Two Sum.cpp
LeetCode/blind75/: 1. Two Sum.c  1. Two Sum.cpp  128. Longest Consecutive Sequence.c  128. Longest Consecutive Sequence.cpp  128. Longest Consecutive Sequence.cs  128. Longest Consecutive Sequence.java  128. Longest Consecutive Sequence.py  3. Longest Substring Without Repeating Characters.c  3. Longest Substring Without Repeating Characters.cpp  3. Longest Substring Without Repeating Characters.py  5. Longest Palindromic Substring.py
PDF-Reader-And-Formatter/: HouseOrderer.cpp  README.md  app.py  settings.txt
PDF-Reader-And-Formatter/Updated-One/: HouseOrderer.cpp  app.py
React-Nonsense/course-homepage-basic/: index.html  package-lock.json  package.json
React-Nonsense/sandbox/: package-lock.json
React-Nonsense/todo-project/: package-lock.json  package.json
Vulkan/Brendan-Tutorials/: Makefile  README.md
Vulkan/Device-Setup_and_Pipeline/: README.md  my_engine_device.hpp
Vulkan/graphics-pipeline-overview/: README.md  app.cpp  app.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_window.cpp  main.cpp
Vulkan/my-stuff/: README.md
Vulkan/opening-a-window/: app.cpp  app.hpp  lve_window.hpp
Vulkan/the-cherno-tutorials/: README.md
Web-Dev-Journey/Flexbox-Crash-Course-2024/: index.html  style.css
calculator-pvp-api/: .gitignore  README.md  pom.xml
java-bracket-syntax/: CHANGELOG.md  README.md  package-lock.json  package.json
jni-test/: Main.cpp  Main.java  README.md
openGL/: .gitignore
pdf-merger-only/: gui-ver.py  pdfs.txt.txt  terminal-ver.py
url-shortener-api/: .env.example  README.md  compose.yml  pom.xml
(+468 files in other folders)
